--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>druid</artifactId>
             <version>1.1.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
