添加志愿者、工作者(加入社区) 的注册功能、pdf文件上传下载功能

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,9 @@ spring:
     testOnReturn: false
     filters: stat,wall,log4j
     logSlowSql: true
-
+  servlet:
+    multipart:
+      max-file-size: 100MB
 
 mybatis:
   mapper-locations: classpath:mapping/*.xml
