--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,7 @@ spring:
   servlet:
     multipart:
       max-file-size: 100MB
+      max-request-size: 500MB
 
 mybatis:
   mapper-locations: classpath:mapping/*.xml
